fixed spacing on new annotation form

--- a/public/dev/sass/modules/_annotate.scss
+++ b/public/dev/sass/modules/_annotate.scss
@@ -140,7 +140,7 @@ $is-open: #475f74;
 }
 
 .annotaion--btn {
-    margin: 15px 0;
+    margin: 0 0 15px 0;
 }
 
 .is-open {
@@ -354,4 +354,7 @@ $is-open: #475f74;
     margin-top: 11px;
 }
 
+.newannotation--assign {
+    padding-bottom: 15px;
+}
 
